// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerOption render snapshot: renders correct option with feedback 1`] = `
<Advanced
  className="collapsible-card"
  onToggle={[Function]}
  open={false}
>
  <Row
    className="my-2"
  >
    <Col
      xs={1}
    >
      <Checker
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        hasSingleAnswer={false}
        setAnswer={[Function]}
      />
    </Col>
    <Col
      xs={10}
    >
      <Form.Control
        as="textarea"
        onChange={[Function]}
        placeholder="Enter an answer"
        rows={1}
        value="Answer 1"
      />
      <Body>
        <div
          className="bg-dark-100 p-4 mt-3"
        >
          <Form.Group
            key="feedback-A"
          >
            <Form.Label
              className="mb-3"
            >
              <FormattedMessage
                defaultMessage="Show following feedback when {answerId} {boldunderline}:"
                description="Label text for feedback if option is selected"
                id="authoring.answerwidget.feedback.selected.label"
                values={
                  Object {
                    "answerId": "A",
                    "boldunderline": <b>
                      <u>
                        <FormattedMessage
                          defaultMessage="is selected"
                          description="Bold & underlined text for feedback if option is selected"
                          id="authoring.answerwidget.feedback.selected.label.boldunderline"
                        />
                      </u>
                    </b>,
                  }
                }
              />
            </Form.Label>
            <Form.Control
              onChange={[Function]}
              placeholder="Feedback message"
              value="some feedback"
            />
          </Form.Group>
        </div>
      </Body>
    </Col>
    <Col
      className="d-inline-flex mt-1"
      xs={1}
    >
      <Trigger>
        <IconButton
          alt="Toggle feedback"
          iconAs="Icon"
          variant="primary"
        />
      </Trigger>
      <IconButton
        alt="Delete answer"
        iconAs="Icon"
        onClick={[Function]}
        variant="primary"
      />
    </Col>
  </Row>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with selected unselected feedback 1`] = `
<Advanced
  className="collapsible-card"
  onToggle={[Function]}
  open={false}
>
  <Row
    className="my-2"
  >
    <Col
      xs={1}
    >
      <Checker
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "selected feedback",
            "title": "Answer 1",
            "unselectedFeedback": "unselected feedback",
          }
        }
        hasSingleAnswer={false}
        setAnswer={[Function]}
      />
    </Col>
    <Col
      xs={10}
    >
      <Form.Control
        as="textarea"
        onChange={[Function]}
        placeholder="Enter an answer"
        rows={1}
        value="Answer 1"
      />
      <Body>
        <div
          className="bg-dark-100 p-4 mt-3"
        >
          <Form.Group
            key="selectedfeedback-A"
          >
            <Form.Label
              className="mb-3"
            >
              <FormattedMessage
                defaultMessage="Show following feedback when {answerId} {boldunderline}:"
                description="Label text for feedback if option is selected"
                id="authoring.answerwidget.feedback.selected.label"
                values={
                  Object {
                    "answerId": "A",
                    "boldunderline": <b>
                      <u>
                        <FormattedMessage
                          defaultMessage="is selected"
                          description="Bold & underlined text for feedback if option is selected"
                          id="authoring.answerwidget.feedback.selected.label.boldunderline"
                        />
                      </u>
                    </b>,
                  }
                }
              />
            </Form.Label>
            <Form.Control
              onChange={[Function]}
              placeholder="Feedback message"
              value="selected feedback"
            />
          </Form.Group>
          <Form.Group
            key="unselectedfeedback-A"
          >
            <Form.Label
              className="mb-3"
            >
              <FormattedMessage
                defaultMessage="Show following feedback when {answerId} {boldunderline}:"
                description="Label text for feedback if option is not selected"
                id="authoring.answerwidget.feedback.unselected.label"
                values={
                  Object {
                    "answerId": "A",
                    "boldunderline": <b>
                      <u>
                        <FormattedMessage
                          defaultMessage="is not selected"
                          description="Bold & underlined text for feedback if option is not selected"
                          id="authoring.answerwidget.feedback.unselected.label.boldunderline"
                        />
                      </u>
                    </b>,
                  }
                }
              />
            </Form.Label>
            <Form.Control
              onChange={[Function]}
              placeholder="Feedback message"
              value="unselected feedback"
            />
          </Form.Group>
        </div>
      </Body>
    </Col>
    <Col
      className="d-inline-flex mt-1"
      xs={1}
    >
      <Trigger>
        <IconButton
          alt="Toggle feedback"
          iconAs="Icon"
          variant="primary"
        />
      </Trigger>
      <IconButton
        alt="Delete answer"
        iconAs="Icon"
        onClick={[Function]}
        variant="primary"
      />
    </Col>
  </Row>
</Advanced>
`;
